data/derived/fa15/progs/unify/prog4157.ml.out
Characters 8-9:
  let _ = 1 && 1;;
          ^
Error: This expression has type int but an expression was expected of type
         bool
